--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,10 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "sequelize": "^4.8.3",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "connect-mongo": "latest",
+    "mongoose": "latest",
+    "express-session": "latest"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
