implement mongo db signup

--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,9 @@
     "sqlite3": "^3.1.8",
     "connect-mongo": "latest",
     "mongoose": "latest",
-    "express-session": "latest"
+    "express-session": "latest",
+    "express-validator": "latest",
+    "serve-favicon": "latest"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
