--- a/server/package.json
+++ b/server/package.json
@@ -31,7 +31,8 @@
     "sequelize": "^4.8.3",
     "sqlite3": "^3.1.8",
     "knex": "latest",
-    "pg": "latest"
+    "pg": "latest",
+    "nodemailer": "latest"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
