--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "vuetify": "^0.15.5",
     "vuex": "^2.4.0",
     "vuex-persistedstate": "^2.0.0",
-    "vuex-router-sync": "^4.3.1"
+    "vuex-router-sync": "^4.3.1",
+    "vue-axios": "latest",
+    "vue-authenticate": "latest"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -87,7 +89,9 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "vue-axios": "latest",
+    "vue-authenticate": "latest"
   },
   "engines": {
     "node": ">= 4.0.0",
