--- a/server/package.json
+++ b/server/package.json
@@ -23,16 +23,20 @@
     "express-validator": "latest",
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.1",
+    "knex": "latest",
     "mongoose": "latest",
     "morgan": "^1.8.2",
+    "nodemailer": "latest",
     "nodemon": "^1.12.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
-    "sequelize": "^4.8.3",
-    "sqlite3": "^3.1.8",
-    "knex": "latest",
     "pg": "latest",
-    "nodemailer": "latest",
+    "request": "latest",
+    "request-promise": "latest",
+    "safe-buffer": "latest",
+    "sequelize": "^4.8.3",
+    "split-sms": "^0.1.7",
+    "sqlite3": "^3.1.8",
     "uuid": "latest"
   },
   "devDependencies": {
