--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/nodemon/bin/nodemon.js src/app.js --exec 'npm run lint && node'",
-    "lint": "true || ./node_modules/.bin/eslint **/*.js",
-    "seed": "node ./seed"
+    "lint": "true || ./node_modules/.bin/eslint **/*.js"
   },
   "keywords": [],
   "author": "oscar <oscarrafaelcampos@gmail.com>",
