--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,7 @@
     "vue": "^2.4.2",
     "vue-router": "^2.7.0",
     "vue-youtube-embed": "^2.1.2",
-    "vuetify": "^0.15.5",
+    "vuetify": "latest",
     "vuex": "^2.4.0",
     "vuex-persistedstate": "^2.0.0",
     "vuex-router-sync": "^4.3.1",
