--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "lodash": "^4.17.4",
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0",
-    "vue-youtube-embed": "^2.1.2",
+    "vue": "latest",
+    "vue-router": "latest",
+    "vue-youtube-embed": "latest",
     "vuetify": "latest",
-    "vuex": "^2.4.0",
-    "vuex-persistedstate": "^2.0.0",
-    "vuex-router-sync": "^4.3.1",
+    "vuex": "latest",
+    "vuex-persistedstate": "latest",
+    "vuex-router-sync": "latest",
     "vue-axios": "latest",
     "vue-authenticate": "latest"
   },
@@ -82,9 +82,9 @@
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
+    "vue-loader": "latest",
+    "vue-style-loader": "latest",
+    "vue-template-compiler": "latest",
     "webpack": "^2.6.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
