--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "joi": "^10.6.0",
     "jsonwebtoken": "^8.0.1",
     "knex": "latest",
+    "moment": "^2.20.1",
     "mongoose": "latest",
     "morgan": "^1.8.2",
     "nodemailer": "latest",
